# pcl_process_examples

./: README.md
ch2/: CMakeLists.txt
ch2/0_pcd_write/: CMakeLists.txt
ch2/0_pcl_read/: CMakeLists.txt  pcd点云文件读取.cpp
ch2/1_pcd2txt/: CMakeLists.txt  pcd文件转文本.cpp
ch2/2_txt2pcd/: 文本转pcd.cpp
ch2/3_mypcd2txt/: 自定义pcd转txt.cpp
ch2/4_pcdwr/: CMakeLists.txt  pcd文件读取与输出.cpp
ch2/6_pcd_concatenating/: 点云连接.cpp
ch2/pcl_write/: pcd点云文件读取.cpp
ch3/: CMakeLists.txt
ch3/0_BilateralFilters/: CMakeLists.txt  双边滤波.cpp
ch3/1_DirectFilter/: CMakeLists.txt  直通滤波.cpp
ch3/2_VoxelGrid/: 体素栅格滤波.cpp
modules/: CMakeLists.txt
modules/0_Features/: 特征估计.cpp
modules/1_Features/: CMakeLists.txt  特征估计1.cpp
modules/2_Features/: CMakeLists.txt  法向计算.cpp
modules/3_NormalEstimate/: CMakeLists.txt  积分图像法线估计.cpp
pcl_application/: CMakeLists.txt
pcl_application/0_hole_detection/: CMakeLists.txt  hole_detection.cpp
pcl_base/: 1_均匀采样.cpp  3_表面重建.cpp  CMakeLists.txt
pcl_base/0_pcd_write/: pcd_write.cpp
pcl_base/0_pcl_read/: CMakeLists.txt  pcd点云文件读取.cpp
pcl_base/10_linescanner/: CMakeLists.txt  LineScaner.h
pcl_base/12_pcd_openni/: CMakeLists.txt
pcl_base/2_txt2pcd/: CMakeLists.txt  文本转pcd.cpp
pcl_base/3_mypcd2txt/: CMakeLists.txt
pcl_base/4_pcdwr/: pcd文件读取与输出.cpp
pcl_base/5_kd-tree/: CMakeLists.txt  kd-tree的使用.cpp
pcl_base/6_pcd_concatenating/: CMakeLists.txt
pcl_base/7_las2pcd/: CMakeLists.txt
pcl_base/8_pcd_ply/: CMakeLists.txt
pcl_base/9_kinect2/: CMakeLists.txt
pcl_module_base/: CMakeLists.txt
pcl_module_base/1_DisplayCloudAsHeight/: CMakeLists.txt  点云高程设色.cpp
pcl_module_base/2_octree/: CMakeLists.txt  octree使用.cpp
pcl_module_base/3_kdtree/: CMakeLists.txt  kd-tree使用.cpp
pcl_module_feature/: CMakeLists.txt
pcl_module_feature/0_Features/: CMakeLists.txt  特征估计.cpp
pcl_module_feature/1_FeaturesSubset/: CMakeLists.txt  点云子集的法向量计算.cpp
pcl_module_feature/2_FeaturesDownsample/: 下采样点集法向计算.cpp
pcl_module_feature/4_PFHEstimate/: CMakeLists.txt  PFH估计.cpp
pcl_module_feature/5_FPFHEstimate/: CMakeLists.txt  FPFH估计.cpp
pcl_module_feature/6_VFHEstimate/: CMakeLists.txt  VFH计算.cpp
pcl_module_feature/7_NARFEstimate/: CMakeLists.txt  NARF计算.cpp
pcl_module_filter/: CMakeLists.txt
pcl_module_filter/10_MedianFilter/: CMakeLists.txt  中值滤波.cpp
pcl_module_filter/1_PassThrough/: CMakeLists.txt  直通滤波.cpp
pcl_module_filter/2_VoxelGrid/: CMakeLists.txt  体素栅格滤波.cpp
pcl_module_filter/3_StatisticalOutlierRemoval/: CMakeLists.txt  统计离群删除.cpp
pcl_module_filter/4_ProjectInliers/: CMakeLists.txt  投影.cpp
pcl_module_filter/5_BilateralFilter/: CMakeLists.txt  双边滤波.cpp
pcl_module_filter/6_ExtractIndices/: CMakeLists.txt  提取索引.cpp
pcl_module_filter/7_OutlinerRemoval2/: CMakeLists.txt  离群点删除.cpp
pcl_module_filter/8_RadiusOutlierRemoval/: CMakeLists.txt  半径滤波.cpp
pcl_module_filter/9_NormalRefinement/: CMakeLists.txt  法向量重定义.cpp
pcl_module_range_image/: 1_基于点云数据创建深度图.cpp  2_深度图创建和可视化.cpp  3_深度图边界提取.cpp  CMakeLists.txt
pcl_module_registration/: 1_基于SURF的点云特征点检测.cpp  2_基于SURF的点云配准.cpp  3_基于IPC的点云配准.cpp  4_基于正态分布变换的点云配准.cpp  5_基于IPC的点对齐.cpp  CMakeLists.txt
pcl_module_sample/: 1_均匀采样.cpp  2_上采样.cpp  CMakeLists.txt
pcl_module_segmentation/: 10_基于颜色的区域生长点云分割.cpp  1_简单平面点云分割.cpp  2_圆柱体模型点云分割.cpp  3_聚类点云分割.cpp  4_平面点云分割.cpp  5_平面提取.cpp  6_欧式分割.cpp  7_条件欧式分割.cpp  8_最小分割.cpp  9_区域生长点云分割.cpp  CMakeLists.txt  README.md
pcl_module_surface/: 1_基于最小二乘法进行平滑处理.cpp  CMakeLists.txt
pcl_module_visualizer/: CMakeLists.txt  可视化工具类.cpp  多点云可视化窗口.cpp  点云查看.cpp
